Minor vixes to the validation controller

--- a/generators/authentasaurus/templates/views/validations/index.html.erb
+++ b/generators/authentasaurus/templates/views/validations/index.html.erb
@@ -1,4 +1,6 @@
-﻿<% form_tag do %>
+﻿<h3><%= flash.now[:notice] %></h3>
+<% form_tag do %>
 	Validation Code :<br>
-	<%= text_field_tag :validation_code, params[:vcode], :size => 44 %>
+	<p><%= text_field_tag :validation_code, params[:vcode], :size => 44 %></p>
+	<p><%= submit_tag "Validate" %></p>
 <% end %>
