fixed some problems with areas
Signed-off-by: Omar Mekky <alfaengine@hotmail.com>

--- a/generators/authentasaurus/templates/views/areas/index.html.erb
+++ b/generators/authentasaurus/templates/views/areas/index.html.erb
@@ -5,7 +5,7 @@
 	</tr>
 	<% @areas.each do |area| %>
 		<tr>
-			<td><%= link_to area.target, area %></td>
+			<td><%= link_to area.name, area %></td>
 		</tr>
 	<% end %>
 </table>
