--- a/generators/authentasaurus/templates/views/areas/show.html.erb
+++ b/generators/authentasaurus/templates/views/areas/show.html.erb
@@ -1,4 +1,4 @@
-<h1><%= @area.target %></h1>
+<h1><%= @area.name %></h1>
 <h3>Groups that have permission on this area</h3>
 <ul>
 	<% @area.groups.each do |group| %>
