--- a/generators/authentasaurus/templates/views/areas/edit.html.erb
+++ b/generators/authentasaurus/templates/views/areas/edit.html.erb
@@ -1,7 +1,7 @@
-<h1>Editing <%= @area.target %></h1>
+<h1>Editing <%= @area.name %></h1>
 <% form_for @area do |f| %>
-	<%= label_for :target %>
-	<%= f.text_field :target, :size => 30 %>
+	<%= label_for :name %>
+	<%= f.text_field :name, :size => 30 %>
 	<br>
 	<%= f.submit %>
 <% end %>
