Fixed some problems, tweaked session model and controller
Signed-off-by: Omar Mekky <alfaengine@hotmail.com>

--- a/generators/authentasaurus/templates/views/groups/show.html.erb
+++ b/generators/authentasaurus/templates/views/groups/show.html.erb
@@ -8,6 +8,6 @@
 <h2>Permissions</h2>
 <ul>
 	<%% @group.permissions.each do |permission| %>
-		<li><%%= link_to permission.area, permission %></li>
+		<li><%%= link_to permission.area.name, permission %></li>
 	<%% end %>
 </ul>
