--- a/generators/authentasaurus/templates/views/permissions/index.html.erb
+++ b/generators/authentasaurus/templates/views/permissions/index.html.erb
@@ -9,7 +9,7 @@
 	<% @permissions.each do |permission| %>
 		<tr>
 			<td><%= link_to permission.group.name, permission.group %></td>
-			<td><%= link_to permission.area.target, permission.area %></td>
+			<td><%= link_to permission.area.name, permission.area %></td>
 			<td><%= check_box_tag :read, "read", permission.read, :disabled => true %></td>
 			<td><%= check_box_tag :write, "write", permission.write, :disabled => true %></td>
 		</tr>
