--- a/generators/authentasaurus/templates/views/groups/edit.html.erb
+++ b/generators/authentasaurus/templates/views/groups/edit.html.erb
@@ -1,6 +1,6 @@
 <h1>Editing <%= @group.name %></h1>
 <% form_for @group do |f| %>
-	<%= label_for :name %>
+	<%= f.label :name %>
 	<%= f.text_field :name, :size => 30 %>
 	<br>
 	<%= f.submit %>
