--- a/generators/authentasaurus/templates/views/areas/new.html.erb
+++ b/generators/authentasaurus/templates/views/areas/new.html.erb
@@ -1,6 +1,6 @@
 <h1>Create Area</h1>
 <% form_for @area do |f| %>
-	<%= label_for :name %>
+	<%= f.label :name %>
 	<%= f.text_field :name, :size => 30 %>
 	<br>
 	<%= f.submit %>
