--- a/generators/authentasaurus/templates/views/permissions/edit.html.erb
+++ b/generators/authentasaurus/templates/views/permissions/edit.html.erb
@@ -1,5 +1,5 @@
 <h1>Editing <%= @permission.area.target %> permissions for <%= @permission.group.name %></h1>
-<%= form_for @permission do |f| %>
+<% form_for @permission do |f| %>
 	<%= f.label :group_id %>
 	<%= f.collection_select(:group_id, Group.find(:all), :id, :name, {:prompt => true}) %>
 	<br>
